Restore old behavior where an nsISupportsArray is exploded into multiple arguments whereas any other COM object simply becomes argv[0]. bug 341362, r+sr=bzbarsky